--- a/resources/assets/frontend/css/styles.css
+++ b/resources/assets/frontend/css/styles.css
@@ -69,6 +69,10 @@ body {
     color: var(--primary-color-3) !important;
 }
 
+.hover-color-7:hover {
+    color: var(--primary-color-7) !important;
+}
+
 .text-gray-600 {
     color: rgb(75 85 99 / var(--tw-text-opacity));
 }
